<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="hello">Hello World, WebCamActivity!</string>
    <string name="app_name">IPED Monitor</string>
    <string name="user_name">Account：</string>
    <string name="user_name_hint">Please Input Account</string>
    <string name="password">Password：</string>
    <string name="password_hint">Pleae Input Password</string>
    <string name="keep_user_pass">Remember the Account and password</string>
    <string name="user_login">Login</string>
    	<string name="username_null">Password can\'t empty,Default is admin</string>
    <string name="user_exit">Cancle</string>
    <string name="user_or_password_is_not_correct_str">Account and Password aren\'t match</string>
    <string name="change_login_pass_str">Change Login Password</string>
    <string name="user_exit_title">Sure exit</string>
    <string name="user_exit_message">Are you sure exit?</string>
    <string name="user_exit_sure">sure</string>
    <string name="user_exit_continue">continue</string>
    <string name="password_modify_security_botton_str">Change Security Password</string>
    <string name="password_modify_title_str">Change Password</string>
    <string name="password_modify_str">modify</string>
    <string name="old_input_password">pre-password</string>
    <string name="old_input_password_error">don\'t match pre-passwrod</string>
    <string name="new_input_password">new password</string>
    <string name="repeat_new_input_password">repeat password</string>
     <string name="password_modify_success_str">modify password success</string>
     <string name="password_modify_error_str">modify password failed</string>
    <string name="login_dialog_str">User Login</string>
    <string name="input_password">Please Input Pasword</string>
    <string name="repeat_input_password">Repeat Password</string>
    <string name="password_is_null">Password can\'t empty</string>
    <string name="password_not_equal">Twice Input Passwort Isn\'t Match</string>
    <string name="password_set_ok">OK,Please Remember The Pasword</string>
    <string name="login_str">OK</string>
    <string name="cancle_login_str">Cancle</string>
    <string name="device_manager_pwd_set_error">Set Password Failed</string>
    <string name="device_manager_pwd_set_time_out">Network Timeout</string>
    <string name="device_manager_pwd_set_err">Password Don\'t Match</string>
    <string name="device_manager_time_out_or_device_off_line">Network Timeout Or Device Offline</string>
    <string name="default_activity_str">Video</string>
    	<string name="connection">Waiting For Connection</string>
    	<string name="connection_error">Error!Please Check-up NetWork And Try Again Later</string>
    	<string name="video_preview_list_null">Device List Is Empty</string>
    	<string name="video_preview_left_up">left-up</string>
    	<string name="video_preview_mid_up"> ↑ </string>
    	<string name="video_preview_right_up">right-up</string>
    	<string name="video_preview_left">←</string>
    	<string name="video_preview_revese">Reverse</string>
    	<string name="video_preview_right">→</string>
    	<string name="video_preview_take_picture">Picture</string>
    	<string name="video_preview_left_mid"> ↓ </string>
    	<string name="video_preview_view_picture">Browse</string>
    	<string name="video_preview_minus_zoom">﹣</string>
    	<string name="video_preview_minus_zoom_str">Zoom</string>
    	<string name="video_preview_add_zoom">﹢</string>
    	<string name="video_preview_minus_foucs">﹣</string>
    	<string name="video_preview_minus_foucs_str">Focus</string>
    	<string name="video_preview_add_foucs">﹢</string>
    	<string name="video_preview_minus_apertrue">﹣</string>
    	<string name="video_preview_minus_apertrue_str">Aperture</string>
    	<string name="video_preview_add_apertrue">﹢</string>
    	<string name="video_preview_clear">Sharp</string>
    	<string name="video_preview_brightness">Brightness</string>
    	<string name="video_preview_contrast">Contrast</string>
    	<string name="video_preview_volume">Volume</string>
    	<string name="video_preview_send_audio_open">Open Talk-Back</string>
    	<string name="video_preview_send_audio_open_success">Operation Success</string>
    	<string name="video_preview_send_audio_open_error_tips">Too Connections To Talk-Back</string>
    	<string name="video_preview_send_audio_open_tips">Talking-Back Can\'t Connection</string>
    	<string name="video_preview_send_audio_open_error">Operation Failed</string>
    	<string name="video_preview_send_audio_close">Close Talk-Back</string>
    	<string name="video_preview_send_audio_close_success">Operation Success</string>
    	<string name="video_preview_send_audio_close_error">Operation Failed</string>
    	<string name="video_preview_qvga_str">QVGA</string>
    	<string name="video_preview_vga_str">VGA</string>
    	<string name="video_preview_720p_str">720P</string>
    <string name="device_manager_str">Device Manager</string>
    	<string name="auto_serch_str">Auto Search</string>
    	<string name="auto_search_tips_str">Waiting For Search</string>
    	<string name="manu_add_str">Manul Add</string>
    		<string name="device_manager_add_title_str">Add New Device</string>
    		<string name="device_manager_add_str">Device Name：</string>
    		<string name="device_manager_add_hint_str">Deivce Name</string>
    		<string name="device_manager_add_name_default_str"></string>
    		<string name="device_manager_local_net_para_str">LAN Parameters</string>
    		<string name="device_manager_new_addr_str">IP Address</string>
    		<string name="device_manager_new_addr_default_str">192.168.1.</string>
    		<string name="device_manager_new_device_id">Device ID ：</string>
    		<string name="device_manager_new_device_id_hint">Device ID</string>
    		<string name="device_manager_new_device_id_not_null">Device ID Can\'t Empty</string>
    		<string name="device_manager_new_device_id_not_number">Deivce ID Format Must Be Numberic</string>
    		<string name="device_manager_find_device_id_error">Query Device Error</string>
    		<string name="device_manager_find_device_id_not_online">Device Off-Line</string>
    		<string name="device_manager_add_device_is_exist">Device Exist</string>
    		<string name="device_manager_new_device_title">Add New Device</string>
    		<string name="device_manager_new_device_add_fail_str">Add Failed</string>
    		<string name="device_manager_new_device_add_success_str">Add Success</string>
    		<string name="device_manager_new_device_message">Confirm Add New Device</string>
    		<string name="device_manager_new_device_subnet_parameter_id">LAN Parameters</string>
    		<string name="device_manager_new_dns1_str">DNS1 </string>
    		<string name="device_manager_new_gateway_addr_str">Gateway</string>
    		<string name="device_manager_new_gateway_addr_default_str">192.168.1.1</string>
    		<string name="device_manager_new_dns2_str">DNS2 </string>
    		<string name="device_manager_new_sub_net_addr_str">Subnet Nask</string>
    		<string name="device_manager_new_sub_net_addr_defualt_str">255.255.255.0</string>
    		<string name="device_manager_new_domain_addr_str">Domain</string>
    		<string name="device_manager_public_new_tcp_port_str">TCP Port</string>
    		<string name="device_manager_dynamic_addr_str">Dynamic IP</string>
    		<string name="device_manager_public_new_udp_port_str">UDP Port</string>
    		<string name="device_manager_add_sure_str">Add</string>
    		<string name="device_manager_add_cancle_str">Cancle</string>
    		<string name="device_manager_add_not_null_str">Device IP Can\'t Empty</string>
    		<string name="device_manager_add_same_ip_str">IP Conflict</string>
    		<string name="device_manager_add_net_type_eth_str">Inner</string>
    		<string name="device_manager_add_net_type_wlan_str">Outer</string>
    		<string name="device_manager_add_query_title_str">Device Add</string>
    		<string name="device_manager_add_query_message_str">Waiting For Add New Device</string>
    		<string name="device_manager_add_id_str">Device</string>
    	<string name="clear_all_str">Clear All</string>
    		<string name="clear_all_device_title_str">Clear All Device</string>
    		<string name="clear_all_device_message_str">Confirm Clear Device List</string>
    		<string name="clear_all_device_ok_str">Confirm</string>
    		<string name="clear_all_device_cancle_str">Cancle</string>
    	<string name="device_edit_str">Cancle</string>
    	<string name="device_del_str">Delete</string>
    	<string name="device_preview_str">PreView</string>
    	<string name="device_para_set_str">Edit</string>
    	<string name="no_device_online">No Device, Pull To Fresh</string>
    	<string name="full_device_online">Loading Success, Pull To Fresh</string>
    	<string name="device_type_str">Type：</string>
    	<string name="device_ip_str">IP：</string>
    	<string name="device_cmd_port_str">CMD：</string>
    	<string name="device_diveo_port_str">Video：</string>
    	<string name="device_gateway_str">Gateway：</string>
    	<string name="device_audio_port_str">Audio：</string>
    <string name="device_params_sets_str">Parameter Set</string>
    	<string name="device_params_info_no_device_str">Add New Device First</string>
    	<string name="device_params_info_str">Device Info:</string>
    	<string name="device_param_inentify_str">Devoce ID:</string>
    	<string name="device_params_version_str">Software Version：</string>
    	<string name="device_params_device_name_str">Device Name：</string>
    	<string name="device_params_address_type_str">Address Type：</string>
    	<string name="device_params_device_address_str">Device Address：</string>
    	<string name="device_params_inside_total_space_str">TFCard Capacity：</string>
    	<string name="device_params_outside_total_space_str">External Disk Capacity：</string>
    	<string name="device_params_storage_device_str">Storge：</string>
    	<string name="device_params_recorde_type_inside_str">TFCard</string>
    	<string name="device_params_recorde_type_outsize_str">Mobile Disk</string>
    	<string name="device_params_recorde_total_time_str">Recording time:</string>
    	<string name="device_params_recorde_type_str">Recording Settings:</string>
    	<string name="device_params_recorde_type_close_str">Off</string>
    	<string name="device_params_recorde_speed_str">Recording Stream：</string>
    	<string name="device_params_recorde_real_speed_str">Real Rate:</string>
    	<string name="device_params_recorde_frame_size_str">Video Size:</string>
    	<string name="device_params_recorde_frame_speed_str">Frame Rate:</string>
    	<string name="device_params_recorde_comp_quar_str">Compress Quality:</string>
    	<string name="device_params_recorde_comp_type_str">Compress Type:</string>
    	<string name="device_params_monitor_speed_str">Monitor Stream:</string>
    	<string name="device_params_date_str">Device Time:</string>
    	<string name="device_params_sync_date_str">Synchronize System Clock</string>
        <string name="system_settings_save_path_hint_str">Video Save Path</string>
        <string name="system_settings_save_path_str">Save Path:</string>
        <string name="system_settings_preview_str">Browse</string>
        <string name="system_settings_device_name_str">Device Nam:</string>
        <string name="system_settings_device_name_hint_str">Input Deivce Name</string>
        <string name="system_settings_device_ip_str">Deivce Address:</string>
        <string name="system_settings_device_ip_hint_str">Input Device Address</string>
        <string name="system_settings_device_bin_addr_str">Bin File</string>
        <string name="system_settings_device_bin_addr_hint_str">Update File Path</string>
        <string name="system_settings_update_str">Browse</string>
        <string name="system_settings_device_update_str">Update</string>
        <string name="system_settings_device_cancle_str">Cancle</string>
</resources>