<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="10.0dip"
    android:paddingLeft="10.0dip"
    android:paddingRight="10.0dip"
    android:paddingTop="5.0dip"
    android:background="@null" >

    <ImageView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/line"/>
  
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="3dip"
        android:layout_weight="1"
        android:paddingTop="20dip">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_manager_add_str" />

            <EditText
                android:id="@+id/device_manager_add_name_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/device_manager_add_hint_str"
                android:singleLine="true"
                android:layout_weight="1"
                android:text="@string/device_manager_add_name_default_str" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_manager_new_device_id" />

            <EditText
                android:id="@+id/device_manager_new_device_id_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/device_manager_new_device_id_hint"
                android:inputType="numberDecimal"
                android:singleLine="true" />
        </TableRow>
    </TableLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/web_cam_sure_add_new_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/web_cam_login_button_selector"
            android:text="@string/device_manager_add_sure_str" />

        <Button
            android:id="@+id/web_cam_cancl_add_new_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/web_cam_login_button_selector"
            android:text="@string/device_manager_add_cancle_str" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>